infra/kubernetes/service-db.yaml

apiVersion: v1
kind: Service
metadata:
  name: placeholder-db-service
  namespace: placeholder-namespace
spec:
  selector:
    app: placeholder-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
